  backported version of my proposed changes to
  email.header.decode_header in http://bugs.python.org/issue1079
  (Ralf)
- issue2550684 Fix XSS vulnerability when username contains HTML code,
  thanks to Thomas Arendsen Hein for reporting and patch.
- issue2550711 Fix XSS vulnerability in @action parameter,
  thanks to "om" for reporting.


2011-07-15: 1.4.19

Features:

- Xapian indexing improved: Slightly faster and slightly smaller database. 
  Closes issue2550687. Thanks to Olly Betts for the patch. (Bernhard Reiter)
- PostgreSQL backend minor improvement: database creation less likely to fail
  for PostgreSQL versions >= 8.1 as the table "postgres" is used by default.
  Closes issue2550543. Thanks to Kai Storbeck for the patch. (Bernhard Reiter)
- Allow HTMLRequest.batch to filter on other permissions than "View"
  (e.g. on the new "Search" permission") by adding a "permission"
  parameter. Thanks to Eli Collins for the patch. Closes issue2550699. (Ralf)

Fixed:

- Installation: Fixed an issue that prevented to use EasyInstall 
  and a Python egg. Thanks to Satchidanand Haridas for the patch and
  John Kristensen for testing it. (Bernhard Reiter)
- The PostgreSQL backend quotes database names now for CREATE and DROP, 
  enabling more exotic tracker names. Closes issue2550497. 
  Thanks to Sebastian Harl for providing the patch. (Bernhard Reiter)
- Updated the url to point to www.roundup-tracker.org in two places in the
  docs. (Bernhard Reiter)
- Do not depend on a CPython implementation detail anymore to make Roundup 
  more compatible with other Python implementations like PyPy.
  Closes issue2550707. Thanks to Christof Meerwald. (Bernhard Reiter, Richard)
- Yet another fix to the mail gateway, messages got *all* files of
  an issue, not just the new ones. Thanks to Rafal Bisingier for
  reporting and proposing a fix. The regression test was updated.
  (Ralf)
- Fix version numbers in upgrade documentation, the file-unlink defect